--- a/src/main/resources/pages/global/login.html
+++ b/src/main/resources/pages/global/login.html
@@ -39,7 +39,7 @@
                 <div class="col-xs-8">
                 </div>
                 <div class="col-xs-4">
-                    <button type="submit" class="btn btn-primary btn-block btn-flat">登录</button>
+                    <button type="submit" class="btn btn-primary btn-block btn-flat" onclick="doLogin()">登录</button>
                 </div>
             </div>
             <a href="#" class="btn btn-sm btn-danger btn-flat">忘记密码</a>
